fixed carousel control on mobile

--- a/_css/carousel.css
+++ b/_css/carousel.css
@@ -43,10 +43,14 @@
     margin-top: -10px;
 }
 .carousel-control.left img{
-    left: 60px;
+    left: 20px;
 }
 .carousel-control.right img{
-    right: 60px;
+    right: 20px;
+}
+.carousel-control{
+    top:auto;
+    bottom:40px;
 }
 .carousel .btn.caption{
     position: absolute;
@@ -99,6 +103,10 @@
 #portfolioCarousel .carousel-control:hover{
     opacity:0.45;
 }
+#portfolioCarousel    .carousel-control{
+        top:0;
+        bottom:0;
+    }
 /* RESPONSIVE CSS
 -------------------------------------------------- */
 @media (min-width: 1024px){
@@ -110,6 +118,16 @@
 @media (min-width: 768px) {
     .carousel, .carousel .item, .carousel-inner > .item > .img{
         height:520px;
+    }
+    .carousel-control.left img{
+    left: 60px;
+}
+.carousel-control.right img{
+    right: 60px;
+}
+    .carousel-control{
+        top:0;
+        bottom:0;
     }
   /* Bump up size of carousel content */
   .carousel-caption p {
